[project]
name = "dashtest"
authors = [{name = "Micky", email = "michaelghijs@gmail.com"}]
readme = "README.md"
description = "just a test"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
dependencies = [
        "plotly",
        "dash",
        "dash-bootstrap-components",
]
version = "0.0.1"

[project.urls]
Homepage = "https://example.com"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "mypy",
]

[tool.setuptools]
packages = ["dashtest"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
strict = true
files = "dashtest/*.py"

[tool.isort]
profile = "black"
